--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -1,9 +1,9 @@
 ---
-import Footer from "../components/Footer.component.astro";
-import Header from "../components/Header.component.astro";
+import Footer from "components/Footer.component.astro";
+import Header from "components/Header.component.astro";
 ---
 
-<html lang="en">
+<html>
   <head>
     <link
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
