--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -1,11 +1,12 @@
 ---
 import ArtOfTheDay from "components/home/ArtOfTheDay.component.astro";
-import Intro from "components/home/Intro.component.astro";
 import Entries from "components/home/Entries.component.astro";
 import Main from "layouts/main.layout.astro";
+import Intro from "components/home/Intro.component.astro";
 ---
 
 <Main>
+  FRENCH VERSION
   <Intro />
   <ArtOfTheDay />
   <Entries />
