--- a/src/pages/quotes.astro
+++ b/src/pages/quotes.astro
@@ -1,5 +1,5 @@
 ---
-import Mainlayout from "../layouts/main.layout.astro";
+import Mainlayout from "layouts/main.layout.astro";
 ---
 
 <Mainlayout>
