--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -1,240 +1,245 @@
 ---
 import Footer from "components/Footer.component.astro";
 import Header from "components/Header.component.astro";
+import { getLangFromUrl } from "src/i18n/utils";
+
+const lang = getLangFromUrl(Astro.url);
 ---
 
-<html>
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="À propos" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
-    <meta name="theme-color" />
-    <title>pedenys</title>
-    <script defer src="/_vercel/insights/script.js"></script>
-    <script type="text/javascript">
-      /**
-       * Avoid FOUC on page load without breaking JS disabled browsers
-       * many thanks to Lawrence Dol | https://stackoverflow.com/a/21668527/14345634
-       */
+<html lang={lang}>
+    <head>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="À propos" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./favicon-16x16.png"
+        />
+        <meta name="theme-color" />
+        <title>pedenys</title>
+        <script defer src="/_vercel/insights/script.js"></script>
+        <script type="text/javascript">
+            /**
+             * Avoid FOUC on page load without breaking JS disabled browsers
+             * many thanks to Lawrence Dol | https://stackoverflow.com/a/21668527/14345634
+             */
 
-      var elm = document.getElementsByTagName("html")[0];
-      elm.style.display = "none";
-      document.addEventListener("DOMContentLoaded", function (event) {
-        elm.style.display = "block";
-      });
-    </script>
-  </head>
+            var elm = document.getElementsByTagName("html")[0];
+            elm.style.display = "none";
+            document.addEventListener("DOMContentLoaded", function (event) {
+                elm.style.display = "block";
+            });
+        </script>
+    </head>
 
-  <body>
-    <div class="website-container">
-      <Header />
-      <div class="content-container">
-        <slot />
-      </div>
-      <Footer />
-    </div>
-    <style is:global>
-      :root {
-        --tintColor: #a5c4a6;
-        --grey-1: #8d8b8b;
-        --black-1: #1e1e1e;
-        --white-1: #ffffff;
-        --white-2: #efefef;
-      }
+    <body>
+        <div class="website-container">
+            <Header />
+            <div class="content-container">
+                <slot />
+            </div>
+            <Footer />
+        </div>
+        <style is:global>
+            :root {
+                --tintColor: #a5c4a6;
+                --grey-1: #8d8b8b;
+                --black-1: #1e1e1e;
+                --white-1: #ffffff;
+                --white-2: #efefef;
+            }
 
-      .tintColor {
-        color: var(--tintColor);
-      }
-      .grey-1 {
-        color: var(--grey-1);
-      }
-      .black-1 {
-        color: var(--black-1);
-      }
-      .white-1 {
-        color: var(--white-1);
-      }
-      .white-2 {
-        color: var(--white-2);
-      }
+            .tintColor {
+                color: var(--tintColor);
+            }
+            .grey-1 {
+                color: var(--grey-1);
+            }
+            .black-1 {
+                color: var(--black-1);
+            }
+            .white-1 {
+                color: var(--white-1);
+            }
+            .white-2 {
+                color: var(--white-2);
+            }
 
-      @font-face {
-        font-family: "Inter";
-        src: url("/assets/InterVariable.woff2") format("woff2");
-        font-display: swap;
-      }
+            @font-face {
+                font-family: "Inter";
+                src: url("/assets/InterVariable.woff2") format("woff2");
+                font-display: swap;
+            }
 
-      html,
-      body,
-      figure,
-      ul,
-      li {
-        margin: 0;
-        padding: 0;
-      }
+            html,
+            body,
+            figure,
+            ul,
+            li {
+                margin: 0;
+                padding: 0;
+            }
 
-      body {
-        font-family:
-          Inter,
-          -apple-system,
-          BlinkMacSystemFont,
-          avenir next,
-          avenir,
-          segoe ui,
-          helvetica neue,
-          helvetica,
-          Cantarell,
-          Ubuntu,
-          roboto,
-          noto,
-          arial,
-          sans-serif;
-        color: var(--grey-1);
-        background-color: var(--black-1);
-        font-size: 22px;
-        line-height: 1.75rem;
+            body {
+                font-family:
+                    Inter,
+                    -apple-system,
+                    BlinkMacSystemFont,
+                    avenir next,
+                    avenir,
+                    segoe ui,
+                    helvetica neue,
+                    helvetica,
+                    Cantarell,
+                    Ubuntu,
+                    roboto,
+                    noto,
+                    arial,
+                    sans-serif;
+                color: var(--grey-1);
+                background-color: var(--black-1);
+                font-size: 22px;
+                line-height: 1.75rem;
 
-        border: 1px solid var(--white-1);
+                border: 1px solid var(--white-1);
 
-        padding: 16px 16px 0px 16px;
+                padding: 16px 16px 0px 16px;
 
-        min-height: 100vh;
-      }
+                min-height: 100vh;
+            }
 
-      * {
-        box-sizing: border-box;
-      }
+            * {
+                box-sizing: border-box;
+            }
 
-      code,
-      kbd,
-      pre,
-      samp {
-        font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-          "Courier New", monospace;
-      }
+            code,
+            kbd,
+            pre,
+            samp {
+                font-family: SFMono-Regular, Menlo, Monaco, Consolas,
+                    "Liberation Mono", "Courier New", monospace;
+            }
 
-      h1,
-      h2,
-      p {
-        margin: 0;
-        padding: 0;
-        line-height: 1.3;
-        letter-spacing: 0.8px;
-      }
+            h1,
+            h2,
+            p {
+                margin: 0;
+                padding: 0;
+                line-height: 1.3;
+                letter-spacing: 0.8px;
+            }
 
-      p,
-      figcaption {
-        font-size: 16px;
-        font-weight: 400;
-      }
+            p,
+            figcaption {
+                font-size: 16px;
+                font-weight: 400;
+            }
 
-      a {
-        color: var(--tintColor);
-      }
+            a {
+                color: var(--tintColor);
+            }
 
-      h2 {
-        font-size: 16px;
-        font-weight: 400;
+            h2 {
+                font-size: 16px;
+                font-weight: 400;
 
-        color: var(--grey-1);
-      }
+                color: var(--grey-1);
+            }
 
-      li {
-        font-size: 16px;
-        font-weight: 400;
-        margin-left: 14px;
-      }
+            li {
+                font-size: 16px;
+                font-weight: 400;
+                margin-left: 14px;
+            }
 
-      /* Containers */
-      .website-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+            /* Containers */
+            .website-container {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
 
-        .content-container {
-          flex-grow: 1;
-          /* Window height minus website container margin-top minus margin-top header & footer */
-          min-height: calc(100vh - (60px + 28px) - (60px + 29px) - 40px - 16px);
-        }
-      }
+                .content-container {
+                    flex-grow: 1;
+                    /* Window height minus website container margin-top minus margin-top header & footer */
+                    min-height: calc(
+                        100vh - (60px + 28px) - (60px + 29px) - 40px - 16px
+                    );
+                }
+            }
 
-      /* Posts */
-      section.post blockquote p:before {
-        content: "«\00a0";
-      }
+            /* Posts */
+            section.post blockquote p:before {
+                content: "«\00a0";
+            }
 
-      section.post blockquote p:after {
-        content: "\00a0»";
-      }
+            section.post blockquote p:after {
+                content: "\00a0»";
+            }
 
-      section.post img {
-        border: 3px double var(--hoverColor);
-        width: 100%;
-      }
+            section.post img {
+                border: 3px double var(--hoverColor);
+                width: 100%;
+            }
 
-      section.post p {
-        margin-bottom: 28px;
-        font-size: 18px;
-      }
+            section.post p {
+                margin-bottom: 28px;
+                font-size: 18px;
+            }
 
-      /* Utility classes */
-      .default-bottom-spacing {
-        margin-bottom: 28px;
-      }
+            /* Utility classes */
+            .default-bottom-spacing {
+                margin-bottom: 28px;
+            }
 
-      .default-top-spacing {
-        margin-top: 28px;
-      }
+            .default-top-spacing {
+                margin-top: 28px;
+            }
 
-      .no-underline-link {
-        text-decoration: none;
-      }
+            .no-underline-link {
+                text-decoration: none;
+            }
 
-      .default-link {
-        color: var(--white-1);
-      }
-      .default-link:hover,
-      .default-link:visited {
-        color: var(--white-1);
-      }
+            .default-link {
+                color: var(--white-1);
+            }
+            .default-link:hover,
+            .default-link:visited {
+                color: var(--white-1);
+            }
 
-      .tint-accent {
-        color: var(--tintColor);
-      }
+            .tint-accent {
+                color: var(--tintColor);
+            }
 
-      /* Desktop */
-      @media (min-width: 638px) {
-        body {
-          border: none;
-        }
-        body > div {
-          margin-top: 40px;
-          max-width: 55%;
-          width: 100%;
-          margin-inline: auto;
-        }
-      }
-    </style>
-  </body>
+            /* Desktop */
+            @media (min-width: 638px) {
+                body {
+                    border: none;
+                }
+                body > div {
+                    margin-top: 40px;
+                    max-width: 55%;
+                    width: 100%;
+                    margin-inline: auto;
+                }
+            }
+        </style>
+    </body>
 </html>
