--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -117,12 +117,15 @@ const lang = getLangFromUrl(Astro.url);
                 background-color: var(--black-1);
                 font-size: 22px;
                 line-height: 1.75rem;
-
                 border: 1px solid var(--white-1);
 
                 padding: 16px 16px 0px 16px;
 
                 min-height: 100vh;
+
+                @media (min-width: 638px) {
+                    border: none;
+                }
             }
 
             * {
