fix: language in footer placement

--- a/src/components/Footer.component.astro
+++ b/src/components/Footer.component.astro
@@ -32,7 +32,10 @@ import LanguagePicker from "components/LanguagePicker.component.astro";
 
         .language-picker__container {
             position: relative;
-            @media (min-width: 638px) {
+            font-size: 14px;
+            margin-left: 14px;
+
+            @media (min-width: 950px) {
                 position: absolute;
                 right: 0;
             }
