--- a/src/components/Header.component.astro
+++ b/src/components/Header.component.astro
@@ -1,5 +1,10 @@
 ---
-import LanguagePicker from "components/LanguagePicker.component.astro";
+import astroConfig from "astro.config.mjs";
+
+const currentLocale =
+    Astro.currentLocale || (astroConfig.i18n?.defaultLocale as string);
+
+const hiddenLink = currentLocale === "fr" ? `/${currentLocale}/quotes` : "/";
 ---
 
 <header class="default-bottom-spacing">
@@ -7,7 +12,7 @@ import LanguagePicker from "components/LanguagePicker.component.astro";
         <a id="header__homepage_link" href="/"
             ><p class="name">Pierre-Emmanuel Denys</p></a
         >
-        <a href="/quotes" id="header__homepage_tagline"
+        <a href={hiddenLink} id="header__homepage_tagline"
             ><p class="subtitle grey-1">Disappear here</p></a
         >
     </div>
