--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -117,7 +117,6 @@ const lang = getLangFromUrl(Astro.url);
                 background-color: var(--black-1);
                 font-size: 22px;
                 line-height: 1.75rem;
-                border: 1px solid var(--white-1);
 
                 padding: 16px 16px 0px 16px;
 
@@ -184,6 +183,7 @@ const lang = getLangFromUrl(Astro.url);
                     min-height: calc(
                         100vh - (60px + 28px) - (60px + 29px) - 40px - 16px
                     );
+                    position: relative;
                 }
             }
 
