feat: 404 in tint color

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -20,6 +20,8 @@ import Main from "layouts/main.layout.astro";
         bottom: 0;
         left: 0;
         right: 0;
+
+        color: var(--tintColor);
     }
 
     h1 {
