fix: body min height

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,13 @@
 import ArtOfTheDay from "components/home/ArtOfTheDay.component.astro";
 import Intro from "components/home/Intro.component.astro";
 import Entries from "components/home/Entries.component.astro";
+import Now from "components/home/Now.component.astro";
 import Main from "layouts/main.layout.astro";
 ---
 
 <Main>
-  <Intro />
-  <ArtOfTheDay />
-  <Entries />
+    <Intro />
+    <ArtOfTheDay />
+    <Entries />
+    <Now />
 </Main>
