--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -176,13 +176,15 @@ const lang = getLangFromUrl(Astro.url);
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-
+                /* window height minus footer min-height */
+                min-height: calc(100vh - 28px);
                 .content-container {
                     flex-grow: 1;
                     /* Window height minus website container margin-top minus margin-top header & footer */
-                    min-height: calc(
+                    min-height: 100%;
+                    /* min-height: calc(
                         100vh - (60px + 28px) - (60px + 29px) - 40px - 16px
-                    );
+                    ); */
                     position: relative;
                 }
             }
@@ -233,11 +235,7 @@ const lang = getLangFromUrl(Astro.url);
 
             /* Desktop */
             @media (min-width: 638px) {
-                body {
-                    border: none;
-                }
                 body > div {
-                    margin-top: 40px;
                     max-width: 55%;
                     width: 100%;
                     margin-inline: auto;
