--- a/src/components/home/Now.component.astro
+++ b/src/components/home/Now.component.astro
@@ -1,13 +1,27 @@
 <div class="now-container">
+<h2># Now</h2>
     <p>
-        &#9775;&nbsp;<i>La crise de la conscience européenne 1680 - 1715</i>,
-        Paul Hazard
+        <em>&#9775;</em>&nbsp;<i
+            >La crise de la conscience européenne 1680 - 1715</i
+        >, Paul Hazard
     </p>
-    <p>&#9833;<i>The Book of Lies</i>, Jack The Ripper</p>
-</div>
+    <p>
+        <em>&#9833;</em><i>The Book of Lies</i>, Jack The Ripper
+    </p>
 
-<style>
-    .now-container p {
-        font-size: 12px;
-    }
-</style>
+    <style>
+        .now-container {
+            h2 {
+                margin-bottom: 14px;
+            }
+            p {
+                font-size: 14px;
+                line-height:1.7;
+                em {
+                    color: var(--white-2);
+                    font-style: normal;
+                }
+            }
+        }
+    </style>
+</div>
