--- a/src/pages/uses.astro
+++ b/src/pages/uses.astro
@@ -8,7 +8,14 @@ import Mainlayout from "layouts/main.layout.astro";
         <h2>Hardware</h2>
         <ul>
             <li>Mac Book Pro 15' 2018 i7 16 Go</li>
-            <li>iPhone 15 Pro 64 Go</li>
+            <li>iPhone 12 64 Go</li>
+            <li>Apple Magic Keyboard (blanc) | MX Mechanical Mini (noir)</li>
+            <li>Apple Magic Mouse (blanche) | MX Master 3S (noire)</li>
+            <li>
+                <a href="https://www.amazon.fr/gp/product/B07DHK5DHN"
+                    >Amazon Basics bras de support</a
+                >
+            </li>
         </ul>
 
         <h2>Software</h2>
@@ -21,6 +28,7 @@ import Mainlayout from "layouts/main.layout.astro";
             <li>MacOS Mail</li>
             <li>iOS Mail</li>
             <li>Apple Notes</li>
+            <li>Apple Reminder</li>
         </ul>
     </section>
 </Mainlayout>
