--- a/src/components/Footer.component.astro
+++ b/src/components/Footer.component.astro
@@ -1,21 +1,18 @@
 ---
-import LanguagePicker from "components/LanguagePicker.component.astro";
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
-import { getLangFromUrl, useTranslations } from "src/i18n/utils";
+import { useTranslations } from "src/i18n/utils";
+const t = useTranslations();
 ---
 
 <footer class="default-top-spacing">
     <p>
         {t("footer.absent")}
-        <a href="https://x.com/pedenys__" class="default-link">X</a>, <a
-            href="https://ni.hil.ist/"
+        <a href="https://x.com/404" class="default-link">X</a>, <a
+            href="https://mastodon.social/404"
             class="default-link">Mastodon</a
         >
         {t("common.and")}
         <a href="https://github.com/pedenys" class="default-link">GitHub</a>
     </p>
-    <div class="language-picker__container"><LanguagePicker /></div>
 </footer>
 
 <style>
@@ -24,7 +21,8 @@ import { getLangFromUrl, useTranslations } from "src/i18n/utils";
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
+        text-align: center;
         align-items: center;
         min-height: 60px;
 
