feat: vertically align quote

--- a/src/layouts/main.layout.astro
+++ b/src/layouts/main.layout.astro
@@ -171,6 +171,9 @@ import Header from "components/Header.component.astro";
                         100vh - (60px + 28px) - (60px + 29px) - 40px - 16px
                     ); */
                     position: relative;
+                    display:flex;
+                    flex-direction:column;
+                    justify-content: center;
                 }
             }
 
