feat: update arrow height

--- a/src/components/home/ArtOfTheDay.component.astro
+++ b/src/components/home/ArtOfTheDay.component.astro
@@ -3,48 +3,44 @@
 ---
 
 <div class="default-bottom-spacing">
-    <figure>
-        <img
-            src="/assets/leon-spilliaert-maison-sur-la-digue-1907.jpeg"
-            alt="Peinture de Léon Spilliart, Maison sur la digue, datée de 1907"
-        />
+  <figure>
+    <img
+      src="/assets/leon-spilliaert-maison-sur-la-digue-1907.jpeg"
+      alt="Peinture de Léon Spilliart, Maison sur la digue, datée de 1907"
+    />
 
-        <figcaption>
-            <span class="arrow">↑</span>
-            <span>Léon Spilliaert, <i>Maison sur la digue</i>, 1907</span>
-        </figcaption>
-    </figure>
+    <figcaption>
+      <span class="arrow">↑</span>
+      <span>Léon Spilliaert, <i>Maison sur la digue</i>, 1907</span>
+    </figcaption>
+  </figure>
 </div>
 <style>
-    figure,
-    img {
+  figure,
+  img {
+    border-radius: 4px;
+    margin-bottom: 4px;
+    max-width: 100%;
+    width: 100%;
+  }
 
-        border-radius: 4px;
-        margin-bottom: 4px;
-        max-width: 100%;
-        width: 100%;
+  figcaption {
+    font-family: "Fira Code", monospace;
+    font-size: 14px;
+  }
+
+  .arrow {
+    font-size: 14px;
+  }
+
+  @media (min-width: 638px) {
+    figure img {
+      max-width: 45vw;
     }
 
-    figcaption {
-        font-family: 'Fira Code', monospace;
-        font-size: 14px;
+    figure .arrow {
+      display: inline-block;
+      font-size: 16px;
     }
-
-    .arrow {
-        font-size: 18px;
-    }
-
-    @media (min-width: 638px) {
-
-        figure img {
-            max-width: 45vw;
-        }
-
-        
-
-        figure .arrow {
-            display: inline-block;
-            font-size: 20px;
-        }
-    }
+  }
 </style>
